# condaexample

./: .gitignore  CMakeLists.txt  README.md  condatest-developer-linux.yml  condatest-developer-osx.yml  condatest-developer-win.yml  condatest-developer.yml  condatest-developer_osx.yml  icon.icns
.github/: workflows_osx_cmake.yml
.github/workflows/: linux_build.yml  osx_build.yml  osx_cmake.yml  win_build.yml
CMake/: FindNexus.cmake
cmake/: FindPyQt.py  FindQScintillaQt5.cmake
cmake/archive/: FindPyQt.py
packaging/osx/: create_bundle.sh
packaging/osx/App/CondaTest.app/Contents/: packages.txt
recipe/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: CMakeLists.txt  example.cpp
src/all_cpp_lib_check_test/: CMakeLists.txt  main.cpp
src/boost_test/: CMakeLists.txt  main.cpp
src/cmake/: README
src/compiler_test/: CMakeLists.txt  main.cpp
src/nexus/: CMakeLists.txt  main.cpp
src/pyqt_package/: CMakeLists.txt  _message_box.sip  import_qt.py  main.py  message_box.h
src/qt_example/: CMakeLists.txt
src/stdlib_test/: CMakeLists.txt  main.cpp
