
option(BUILD_ALL "Build all tests" ON ) 
option(BOOST_TEST "Builds boost project test" OFF)
option(COMPILER_TEST "Builds compiler test" OFF)
option(STDLIB_TEST "Builds stdlib test" OFF)
option(ALL_LIB__TEST "Builds all_cpp_lib_check_test" OFF)
option(NEXUS_TEST "Builds the nexus test" OFF)
option(PYQT_TEST "Builds the pyqt test" OFF)
option(QT_TEST "Builds the qt example" OFF)

if (BOOST_TEST OR BUILD_ALL)
add_subdirectory(boost_test)
endif()
if (COMPILER_TEST OR BUILD_ALL)
add_subdirectory(compiler_test)
endif()
if (STDLIB_TEST OR BUILD_ALL)
add_subdirectory(stdlib_test)
endif()
if (ALL_LIB_TEST OR BUILD_ALL)
add_subdirectory(all_cpp_lib_check_test)
endif()
if (NEXUS_TEST OR BUILD_ALL)
add_subdirectory(nexus)
endif()
if(PYQT_TEST OR BUILD_ALL)
add_subdirectory(pyqt_package)
endif()
if (QT_TEST OR BUILD_ALL)
add_subdirectory(qt_example)
endif()



